fix: white space on right side of page fixed

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
 .App {
-  overflow: hidden;
+  /* overflow: hidden; */
 }
+/* 
+Very usefull to debug css layout */
+/* * {
+  background: #000 !important;
+  color: #0f0 !important;
+  outline: solid #f00 1px !important;
+} */
